update appache http-tools